Use inputream  for donwload/uploading data